# tredge_macro_this

./: .gitignore  Cargo.toml
macro_this/: Cargo.toml
macro_this/src/: db_helper.rs  lib.rs  main.rs
proc_macro_this/: Cargo.toml
proc_macro_this/src/: lib.rs
src/: Cargo.toml  db_helper.rs  lib.rs
